# hiltend-etl

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-proud-meadow-095708500.yml
hiltend-backend/: .dockerignore  azure-container-image-mng.txt  dockerfile  main.py  pyproject.toml  requirements.txt  run-after-module-installs
hiltend-backend/ops-guide/: azure-container-image-mng.txt  run-after-module-installs.txt  run-cmd.txt
hiltend-frontend/: authConfig.ts  index.html  package-lock.json  package.json  vite-env.d.ts
hiltend-frontend/src/: App.tsx  main.tsx
