[project]
name = "hiltend-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-storage-file-datalake>=12.23.0",
    "fastapi[standard]>=0.136.0",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.49",
]
